	- Added a new data type "decimal" which is mostly the same as our
	  "numeric" but uses a fixed length array to store the digits. This is
	  for compatibility with Informix and maybe others.
	  
Wed Jul  2 09:45:59 CEST 2003

	- Fixed initialization bug in compatlib.
	- Added postgres_fe.h to all files in pgtypeslib.
	
Fri Jul  4 13:51:11 CEST 2003

	- date, interval and timestamp data should be quoted. 
	
Mon Jul  7 14:13:43 CEST 2003

	- Made sure "char *" is handled differently than "char []".
	
Tue Jul  8 09:04:31 CEST 2003

	- Fixed segfault in ECPGconnect in Informix mode.
	
Tue Jul  8 12:34:00 CEST 2003

	- Made Informix decimal-ascii conversion honor Informix NULLs.
	- Informix variable handling didn't cope well with arrays.
	
Wed Jul  9 11:45:02 CEST 2003

	- Made all Informix functions honor Informix NULLs.
	- Extended compatibility functions for INFORMIX handling of DECLARE
	  statement to work with indicators.
	  
Mon Jul 14 09:34:04 CEST 2003

	- Synced preproc.y with gram.y
	- Init sqlca in ECPGprepare().
	- Added CLOSE DATABASE for Informix compatibility.
	
Tue Jul 15 14:28:53 CEST 2003

	- Started to add error codes for backend error messages.
	
Thu Jul 17 09:15:59 CEST 2003

	- Fixed some bugs in informix compat functions.
	
Fri Jul 18 16:31:10 CEST 2003

	- Added some more compatibility features to the parser.
	
Thu Jul 24 10:33:51 CEST 2003

	- Fixed mdy functions to use correct offset.
	
Fri Jul 25 18:08:18 CEST 2003

	- Added explicit casts for date/timestamp/interval.
	
Fri Aug  1 08:54:02 CEST 2003
	
	- Added some Informix error codes in Informix mode.
	- Added just another pgtypeslib function.

Mon Aug 25 13:24:27 CEST 2003

	- Synced parser.
	
Tue Aug 26 18:06:45 CEST 2003

	- Fixed processing of connect statement with username as variable.
	
Mon Sep  1 14:33:10 CEST 2003

	- Fixed two bugs in numeric library.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
