@@ -8,18 +8,18 @@
 
 #define SQLNOTFOUND 100
 
-#ifndef Date
-#define Date long
-#endif   /* ! Date */
+#ifndef date
+#define date long
+#endif   /* ! date */
 
-extern int	rdatestr(Date, char *);
-extern void rtoday(Date *);
-extern int	rjulmdy(Date, short *);
-extern int	rdefmtdate(Date *, char *, char *);
-extern int	rfmtdate(Date, char *, char *);
-extern int	rmdyjul(short *, Date *);
-extern int	rstrdate(char *, Date *);
-extern int	rdayofweek(Date);
+extern int	rdatestr(date, char *);
+extern void rtoday(date *);
+extern int	rjulmdy(date, short *);
+extern int	rdefmtdate(date *, char *, char *);
+extern int	rfmtdate(date, char *, char *);
+extern int	rmdyjul(short *, date *);
+extern int	rstrdate(char *, date *);
+extern int	rdayofweek(date);
 
 extern int	rfmtlong(long, char *, char *);
 extern int	rgetmsg(int, char *, int);
@@ -28,7 +28,7 @@ extern int	rsetnull(int, char *);
 extern int	rtypalign(int, int);
 extern int	rtypmsize(int, int);
 extern int	rtypwidth(int, int);
-extern void rupshift(char *);
+extern void 	rupshift(char *);
 
 extern int	byleng(char *, int);
 extern void ldchar(char *, int, char *);
